--- a/src/main/webapp/asd.html
+++ b/src/main/webapp/asd.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <mata charset="GBK"/>
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css">
-    <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
-    <script>
-        $(document).on("pageinit","#pageone",function(){
-            $(document).on("scrollstop",function(){
-                alert("停止滚动！");
-            });
-        });
-    </script>
+    <meta charset="UTF-8">
+    <title></title>
 </head>
 <body>
-<body>
-<div id="div1" style="width:100px; height:100px; background:red";></div>
+<h1 id="numBox" ></h1>
 </body>
-<script>
-    var oDiv = document.getElementById('div1');
-    oDiv.onclick=function(){
-        if(this.style.backgroundColor == 'red'){
-            this.style.backgroundColor = '#ccc';
-        }else{
-            this.style.backgroundColor = 'red';
-        }
-    };
+<script type="text/javascript">
+    function numRunFun(num, maxNum){
+        var numBox = document.getElementById("numBox");
+        var num = num;
+        var maxNum = maxNum;
+        var timer = setInterval(function(){
+            num++; // 调节速度
+            if(num >= maxNum){
+                numBox.innerHTML = maxNum;
+                clearInterval(timer);
+            } else {
+                numBox.innerHTML = ~~(num);
+            }
+        },100); // 也可以调节速度
+    }
+
+    // 运行
+    numRunFun(0, 10);
 </script>
-</body>
 </html>
