--- a/src/main/webapp/info_1.html
+++ b/src/main/webapp/info_1.html
@@ -389,7 +389,7 @@ html{
 	-->
 	
 	<div class="shaixuan">
-		<div class="my_yue">余额：<span>0.00</span>元</div>
+		<div class="my_yue">余额：<span id="numBox">0.00</span>元</div>
 		<div class="fenlei">
 			<div style="width:60%;float:right" onClick="$('#xialalan').toggle();">
 				<span id="fenlei_word">分类</span>
@@ -479,14 +479,15 @@ html{
 <script src="js/jquery.min.js"></script>
 <script src="js/jquery-weui.min.js"></script>
 <script src="js/fastclick.js"></script>
-<script src="js/common.js?no=001"></script>
+<script src="js/common.js?id=002"></script>
 <script>
   $(function() {
     FastClick.attach(document.body);
   });
 </script>
 <script>  
-
+var yu='';
+var e='';
 	//获取openId
 	var openId = getOpenIdFromCookie(); 
 	var xiaofeiType = 0;
@@ -522,7 +523,7 @@ html{
 	qiehuan(tabValue);	 
 	loadChuruRecord(0,pageSize,month);
 	loadXiaofeiRecord();
-	loadYuE();
+	//loadYuE();
 	loadSum();
 	
 	//切换tab页
@@ -602,7 +603,7 @@ html{
 				},
 				type:'GET',
 				beforeSend: function(){
-				($('#load_more2').show());
+				//($('#load_more2').show());
 				},
 
 				success:function(data){
@@ -679,7 +680,8 @@ html{
 				},
 
 				success:function(data){
-					$("#load_more2").addClass("hide");
+					//$("#load_more2").addClass("hide");
+					$('#load_more2').hide();
 					var result = JSON.parse(data.data);
 					var xiaof="消费";
 					var chongz="充值";
@@ -821,7 +823,7 @@ html{
 
 
 	//加载余额数据
-	function loadYuE() {
+	/*function loadYuE() {
 		var url = "/api/forward/getYuE";
 		$.ajax({
 			async: false,
@@ -839,7 +841,7 @@ html{
 				}
 			}
 		});
-	}
+	}*/
 
 	//加载支出，充值数据
 	function loadSum(paramMonth) {
@@ -861,10 +863,29 @@ html{
 					//alert(result.data.money);
 					$("zhichu").html(result.data.money== null ? 0 : result.data.money);
 					$("chongzhi").html(result.data.remainMoney == null ? 0 : result.data.remainMoney);
+				yu=	$(".my_yue span").html(toDecimal2(result.data.remainMoney - result.data.money));//余额
+					e=result.data.remainMoney - result.data.money;
+					numRunFun(0,e);//动态金额
 				}
 			}
 		});
 	}
+
+function numRunFun(num, maxNum){
+	var numBox = document.getElementById("numBox");
+	var num = num;
+	var maxNum = maxNum;
+	var timer = setInterval(function(){
+		num++; // 调节速度
+		if(num >= maxNum){
+			numBox.innerHTML = maxNum;
+			clearInterval(timer);
+		} else {
+			numBox.innerHTML = ~~(num);
+		}
+	},1); // 也可以调节速度
+}
+
 
 	//验证是否已经绑定过
 	function validateBind(){
@@ -988,5 +1009,7 @@ html{
 		$("#xialalan").hide();
 		loadXiaofeiRecord(type,paramMonth);
 	}
+
+
 </script>
 </html>
